Fixed drawings flex overflow

--- a/art_pieces/static/index.css
+++ b/art_pieces/static/index.css
@@ -6,21 +6,21 @@
 .art_container {
     max-width: 300px;
     max-height: 300px;
-    margin: 25px;
+    margin: 5px;
 }
 
 .flex-container {
-    margin: 25px;
     display: flex;
     flex-direction: row;
-    max-width: 300px;
-    max-height: 300px;
-    align-items: center;
+    flex-wrap: wrap;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 body,
 html {
     margin: 0;
     padding: 0;
-    max-width: 100%;
+    overflow-x: hidden;
+    width: auto;
 }
